@@ -17,6 +17,7 @@ ver. 0.7.3 (2006/??/??) - beta
 - First attempt at solving bug #1457620 (locale issue)
 - Performance improvements
 - (Re)added permanent banning with banTime < 0
+- Added DNS support to "ignoreip". Feature Request #1285859
 
 ver. 0.7.2 (2006/09/10) - beta
 ----------
